--- a/SpringWebBoardProject/src/main/webapp/WEB-INF/web.xml
+++ b/SpringWebBoardProject/src/main/webapp/WEB-INF/web.xml
@@ -52,13 +52,11 @@
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<!-- 
-		XML로 환경설정이 된 경우 사용 => Spring 4
+		<!-- XML로 환경설정이 된 경우 사용 => Spring 4 -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/config/application-*.xml</param-value>  xml 파일 경로지정
+			<param-value>/WEB-INF/config/application-*.xml</param-value> <!-- xml 파일 경로지정 -->
 		</init-param>
-		-->
 			<!-- 
 				public class dispatcherServlet extends HttpServlet{
 					public void init(ServletConfig config){
@@ -77,6 +75,7 @@
 			-->
 		
 		<!-- Spring 5 : 자바로 환경설정 -->
+		<!-- 
 		<init-param>
 			<param-name>contextClass</param-name>
 			<param-value>
@@ -87,6 +86,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>com.sist.config.MvcConfig</param-value>
 		</init-param>
+		-->
 	</servlet>
 		
 	 <servlet-mapping>
