--- a/SpringLastProject/src/main/webapp/WEB-INF/web.xml
+++ b/SpringLastProject/src/main/webapp/WEB-INF/web.xml
@@ -3,50 +3,48 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	
-	<!-- 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+		 /WEB-INF/security/application-datasource.xml
+		</param-value>
 	</context-param>
-
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	-->
-	
+   
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<!-- XML로 환경설정이 된 경우 사용 => Spring 4 -->
+		<!--
+		XML로 환경 설정이 된 경우 사용 -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/config/application-*.xml</param-value> <!-- xml 파일 경로지정 -->
-		</init-param>
+			<param-value>/WEB-INF/config/application-*.xml</param-value>
+		</init-param> 
 	</servlet>
 		
-	 <servlet-mapping>
-	     <servlet-name>dispatcher</servlet-name>
-	     <url-pattern>*.do</url-pattern>
-	 </servlet-mapping>
-
-	<!-- 한글 변환 -->
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
+	
+	<!--  한글 변환  -->
 	<filter>
-	     <filter-name>encodingFilter</filter-name>
-	     <filter-class>
-	         org.springframework.web.filter.CharacterEncodingFilter
-	     </filter-class>
-	     <init-param>
-	         <param-name>encoding</param-name>
-	         <param-value>UTF-8</param-value>
-	     </init-param>
-	     <init-param>
-	         <param-name>forceEncoding</param-name>
-	         <param-value>true</param-value>
-	     </init-param>
-  	 </filter>
-	 <filter-mapping>
-	     <filter-name>encodingFilter</filter-name>
-	     <url-pattern>/*</url-pattern>
-	 </filter-mapping>
+      <filter-name>encodingFilter</filter-name>
+      <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+      <init-param>
+        <param-name>encoding</param-name>
+        <param-value>UTF-8</param-value>
+      </init-param>
+      <init-param>
+        <param-name>forceEncoding</param-name>
+        <param-value>true</param-value>
+      </init-param>
+    </filter>
+    <filter-mapping>
+      <filter-name>encodingFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
